--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Escher Systems</title>
+	<style>
+		body {
+			text-align: center;
+			background-color: #c3c6c3;
+		}
+		h1, p {
+			font-family: Arial;
+			font-size: 10px;
+			margin: 0;
+		}
+		h1 {
+			font-weight: bold;
+		}
+	</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<img src="logo.png">
+	<h1>Escher Systems</h1>
+	<p>19/02/2023</p>
 </body>
 </html>
