--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</style>
 </head>
 <body>
-	<img src="logo.png">
+	<img src="logo.png" style="max-width: 300px;">
 	<h1>Escher Systems</h1>
 	<p>19/02/2023</p>
 </body>
