--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 		body {
 			text-align: center;
-			background-color: #c3c6c3;
+			background-color: black;
 		}
 		h1, p {
 			font-family: Arial;
