--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<style>
 		body {
 			text-align: center;
-			background-color: black;
+			background-color: #0d0f11;
 		}
 		h1, p {
 			font-family: Arial;
 			font-size: 10px;
 			margin: 0;
+			color: white;
 		}
 		h1 {
 			font-weight: bold;
