--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 		body {
 			text-align: center;
-			background-color: #0d0f11;
+			background-color: #191c1f;
 		}
 		h1, p {
 			font-family: Arial;
